<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >
    
<ImageView android:src="@drawable/diabdiet_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dip"/>
    
<Button 
android:text="@string/main_solve" 
android:id="@+id/main_solve" 
android:layout_width="wrap_content"
android:width="150dip"
android:layout_height="wrap_content"></Button>

<Button 
android:text="@string/main_editk" 
android:id="@+id/main_editk" 
android:layout_width="wrap_content"
android:width="150dip"
android:layout_height="wrap_content"></Button>

<Button 
android:text="@string/main_editm" 
android:id="@+id/main_editm" 
android:layout_width="wrap_content"
android:width="150dip"
android:layout_height="wrap_content"></Button>

</LinearLayout>
